tests/sema/negative/struct_field_void_type.nv
struct Bad {
    x: void;
}

fn main() : void {
    return;
}
